<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/dream_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_description_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description">

        <EditText
            android:id="@+id/et_dream_description_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_dream_description_input" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/color_choice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_description_input" />

    <RadioGroup
        android:id="@+id/rg_color_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_color">

        <RadioButton
            android:id="@+id/rb_color_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_color_red" />

        <RadioButton
            android:id="@+id/rb_color_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_color_yellow" />

        <RadioButton
            android:id="@+id/rb_color_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_color_blue" />

        <RadioButton
            android:id="@+id/rb_color_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_color_black" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/date_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_color_input" />

    <DatePicker
        android:id="@+id/dp_date_added_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        app:layout_constraintTop_toBottomOf="@id/tv_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/b_save_dream"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_save_dream"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dp_date_added_input" />
</androidx.constraintlayout.widget.ConstraintLayout>